# lumen-ui

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.fr.md  README.md  RELEASING.md  ROADMAP.md  deny.toml
.agents/skills/verify-ai-docs/: SKILL.md
.agents/skills/verify-standards/: SKILL.md
.claude/: settings.json
.claude/skills/verify-ai-docs/: SKILL.md
.claude/skills/verify-standards/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  pages.yml  snapshots.yml
crates/lumen-core/: Cargo.toml
crates/lumen-core/benches/: hot_paths.rs
crates/lumen-core/src/: AI_CONTEXT.md  AI_SUMMARY.md  a11y.rs  anim.rs  builder.rs  context.rs  dark.rs  lib.rs  light.rs  palette.rs  recipe.rs  theme.rs  tokens.rs
crates/lumen-icons/: Cargo.toml
crates/lumen-icons/src/: AI_CONTEXT.md  AI_SUMMARY.md  lib.rs
crates/lumen-layout/: Cargo.toml
crates/lumen-layout/src/: AI_CONTEXT.md  AI_SUMMARY.md  lib.rs
crates/lumen-motion/: Cargo.toml
crates/lumen-motion/src/: AI_CONTEXT.md  AI_SUMMARY.md  easing.rs  lib.rs
crates/lumen-patterns/: Cargo.toml
crates/lumen-patterns/src/: AI_CONTEXT.md  AI_SUMMARY.md  command_palette.rs  dashboard.rs  lib.rs  logpanel.rs  rows.rs  sidebar.rs
crates/lumen-themes/: Cargo.toml
crates/lumen-themes/src/: AI_CONTEXT.md  AI_SUMMARY.md  lib.rs
crates/lumen-ui/: Cargo.toml
crates/lumen-ui-audio/: Cargo.toml
crates/lumen-ui-audio/src/: AI_CONTEXT.md  AI_SUMMARY.md  fader.rs  knob.rs  level_bar.rs  lib.rs  transport.rs  vu_meter.rs  waveform.rs  xy_pad.rs
crates/lumen-ui-audio/tests/: audio.rs  snapshot.rs
crates/lumen-ui-core/: Cargo.toml
crates/lumen-ui-core/benches/: hot_paths.rs
crates/lumen-ui-core/src/: AI_CONTEXT.md  AI_SUMMARY.md  a11y.rs  anim.rs  dark.rs  date.rs  lib.rs  palette.rs  recipe.rs  theme.rs
crates/lumen-ui-icons/: Cargo.toml
crates/lumen-ui-icons/src/: AI_CONTEXT.md  AI_SUMMARY.md  generated_icons.rs  lib.rs
crates/lumen-ui-layout/: Cargo.toml
crates/lumen-ui-layout/src/: AI_CONTEXT.md  AI_SUMMARY.md  lib.rs
crates/lumen-ui-motion/: Cargo.toml
crates/lumen-ui-motion/src/: AI_CONTEXT.md  AI_SUMMARY.md  lib.rs  spring.rs  transitions.rs
crates/lumen-ui-patterns/: Cargo.toml
crates/lumen-ui-patterns/src/: AI_CONTEXT.md  AI_SUMMARY.md  auth_card.rs  bars.rs  command_palette.rs  data_table.rs  form.rs  lib.rs  logpanel.rs  master_detail.rs  rows.rs  sidebar.rs  wizard.rs
crates/lumen-ui-patterns/tests/: patterns.rs
crates/lumen-ui-themes/: Cargo.toml
crates/lumen-ui-themes/src/: AI_CONTEXT.md  AI_SUMMARY.md  lib.rs
crates/lumen-ui-widgets/: Cargo.toml
crates/lumen-ui-widgets/src/: AI_CONTEXT.md  AI_SUMMARY.md  accordion.rs  alert.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  calendar.rs  card.rs  carousel.rs  checkbox.rs  chip.rs  circular_progress.rs  code.rs  color_picker.rs  combobox.rs  data_grid.rs  date_picker.rs  description_list.rs  divider.rs  drawer.rs  dropdown_menu.rs  empty_state.rs  file_upload.rs  form_field.rs  icon_button.rs  kbd.rs  knob.rs  lib.rs  link.rs  modal.rs  multi_select.rs  number_input.rs  overlay.rs  pagination.rs  progress.rs  radio.rs  range_slider.rs  rating.rs  (+17 more)
crates/lumen-ui-widgets/tests/: widgets.rs
crates/lumen-ui/examples/: catalogue.rs  dashboard.rs  gallery.rs  icons.rs  minimal.rs  motion.rs  responsive.rs
crates/lumen-ui/src/: AI_CONTEXT.md  AI_SUMMARY.md  lib.rs
crates/lumen-widgets/: Cargo.toml
crates/lumen-widgets/src/: AI_CONTEXT.md  AI_SUMMARY.md  badge.rs  button.rs  card.rs  checkbox.rs  focus.rs  lib.rs  radio.rs  select.rs  slider.rs  switch.rs  text.rs  text_field.rs  toast.rs
crates/lumen-widgets/tests/: widgets.rs
docs/: ROADMAP-v2-catalogue.md  api-freeze.md  glossary.md  performance.md
docs/adr/: 0001-workspace-from-day-zero.md  0002-recipes-parameterized-by-state.md  0003-minimal-motion-v02.md  0004-msrv-egui-pin.md  0005-defer-material-adapter.md  0006-wcag-aa-audit.md  0007-crate-namespacing-lumen-ui.md  0008-svg-icon-codegen.md  0009-recipe-resolution-pure-functions.md  0010-datagrid-egui-extras.md  0011-date-handling.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  accessibility.md  architecture.md  audio.md  concepts.md  getting-started.md  introduction.md  layout.md  motion.md  patterns.md  theming.md  widgets.md
tools/ai_docs/: assemble_context.py  config.sh.example  find_python.sh  generate_ai_summary.py  generate_all.py  generate_metrics.py  module_discovery.py  run_hook.sh  source_config.py  update_on_edit.py
tools/lumen-icon-gen/: Cargo.toml  README.md
tools/lumen-icon-gen/src/: main.rs
tools/lumen-theme-gen/: Cargo.toml
tools/lumen-theme-gen/src/: main.rs
web/: Cargo.toml  README.md  index.html
web/src/: main.rs
