# lumen-ui — workspace root.
# Workspace dès le jalon 0 (cf. ROADMAP.md §"Décision d'architecture") : on ne crée
# que les crates nécessaires à chaque version, mais les frontières pub/pub(crate) sont
# imposées par le compilateur dès le début.
[workspace]
resolver = "2"
members = [
    "crates/lumen-ui-core",
    "crates/lumen-ui-widgets",
    "crates/lumen-ui-layout",
    "crates/lumen-ui-motion",
    "crates/lumen-ui-patterns",
    "crates/lumen-ui-themes",
    "crates/lumen-ui-icons",
    "crates/lumen-ui-audio",
    "tools/lumen-theme-gen",
    "tools/lumen-icon-gen",
    "crates/lumen-ui",
]

# Métadonnées partagées par toutes les crates lumen-* (héritées via `*.workspace = true`).
[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.92"            # MSRV — voir docs/adr/0004-msrv-egui-pin.md
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rwanbt/lumen-ui"
homepage = "https://github.com/Rwanbt/lumen-ui"
authors = ["Erwan Barat <barat.erwan@gmail.com>"]
keywords = ["egui", "ui", "design-system", "gui", "theme"]
categories = ["gui"]

[workspace.dependencies]
# Pin strict de la version egui — la couche d'adaptation unique vit dans lumen-ui-core.
# Voir le registre des risques de ROADMAP.md (breaking changes egui ~3 mineures/an).
egui = "0.34.3"
# egui_taffy: flexbox/grid layout (v0.4). Isolé derrière la feature `layout`.
# Compat vérifiée : egui_taffy 0.12 dépend de egui 0.34.3.
egui_taffy = "0.12"
# egui_extras: TableBuilder (DataGrid — virtualisation, colonnes resizables, header sticky).
# Isolé derrière la feature `datagrid` (cf. ADR-0010). default-features=false : on n'utilise que
# `TableBuilder`, pas les loaders d'images / syntect.
egui_extras = { version = "0.34.3", default-features = false }
# Crates internes (chemin) — versionnées ensemble pour la publication coordonnée v1.0.
lumen-ui-core = { path = "crates/lumen-ui-core", version = "1.0.0" }
lumen-ui-widgets = { path = "crates/lumen-ui-widgets", version = "1.0.0" }
lumen-ui-layout = { path = "crates/lumen-ui-layout", version = "1.0.0" }
lumen-ui-motion = { path = "crates/lumen-ui-motion", version = "1.0.0" }
lumen-ui-patterns = { path = "crates/lumen-ui-patterns", version = "1.0.0" }
lumen-ui-themes = { path = "crates/lumen-ui-themes", version = "1.0.0" }
lumen-ui-icons = { path = "crates/lumen-ui-icons", version = "1.0.0" }
lumen-ui-audio = { path = "crates/lumen-ui-audio", version = "1.0.0" }

# Profil release optimisé pour les exemples / galeries WASM.
[profile.release]
opt-level = 3
lto = "thin"
