[package]
name = "lumen-core"
description = "Tokens, density, theme trait, and state-parameterized recipes — the foundation layer of lumen-ui."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
egui = { workspace = true }
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
# Active la (dé)sérialisation des tokens/thèmes — utilisé par tools/lumen-theme-gen (v0.7).
serde = ["dep:serde", "egui/serde"]
