[package]
name = "lumen-core"
description = "Tokens, density, theme trait, and state-parameterized recipes — the foundation layer of lumen-ui."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
egui = { workspace = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[features]
default = []
# Active la (dé)sérialisation des tokens/thèmes — utilisé par tools/lumen-theme-gen (v0.7).
serde = ["dep:serde", "egui/serde"]

# Hot-path microbenchmarks (recipe resolution, WCAG contrast). Run with `cargo bench`.
# `test = false`: the CI test job skips them; clippy --all-targets still lints them.
[[bench]]
name = "hot_paths"
harness = false
test = false
