[package]
name = "lumen-icons"
description = "A small set of crisp, theme-colored vector icons for lumen-ui (painter-drawn, no font asset)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
egui = { workspace = true }
lumen-core = { workspace = true }
