[package]
name = "lumen-themes"
description = "Extra theme family for lumen-ui: AudioDark and HighContrast (built on PaletteTheme)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
egui = { workspace = true }
lumen-core = { workspace = true }
