[package]
name = "lumen-ui-audio"
description = "Audio/DAW controls for lumen-ui (Knob, Fader, VU meter, …) — painter-drawn, theme-colored."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
egui = { workspace = true }
lumen-ui-core = { workspace = true }

[dev-dependencies]
egui_kittest = "0.34.3"
