[package]
name = "lumen-ui-audio"
description = "Audio/DAW controls for lumen-ui (Knob, Fader, VU meter, …) — painter-drawn, theme-colored."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
egui = { workspace = true }
lumen-ui-core = { workspace = true }

[dev-dependencies]
# `wgpu` + `snapshot` power the GPU pixel-snapshot test (tests/snapshot.rs, #[ignore]).
# Dev-deps are not built by `cargo check`, so this does not affect the MSRV job; the snapshot
# test only runs in the dedicated `snapshots` workflow (Linux + software adapter).
egui_kittest = { version = "0.34.3", features = ["wgpu", "snapshot"] }
# Dev-only: the snapshot scene composes the generic controls (which live in widgets) next to the
# audio displays, so the reference image stays representative. Not a runtime dependency.
lumen-ui-widgets = { workspace = true }
