[package]
name = "lumen-ui-patterns"
description = "Ready-made application patterns for lumen-ui: dashboard, sidebar, inspector, settings, log panel, command palette."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
egui = { workspace = true }
lumen-ui-core = { workspace = true }
lumen-ui-widgets = { workspace = true }
