[package]
name = "lumen-ui-patterns"
description = "Ready-made application patterns for lumen-ui: dashboard, sidebar, inspector, settings, log panel, command palette."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
egui = { workspace = true }
lumen-ui-core = { workspace = true }
lumen-ui-widgets = { workspace = true }

[dev-dependencies]
# Headless, AccessKit-driven behavioral tests. No default features (no wgpu/snapshot).
# `install` / `DarkTheme` come from lumen-ui-core (already a normal dependency).
egui_kittest = { version = "0.34.3", default-features = false }
