[package]
name = "lumen-ui-patterns"
description = "Ready-made application patterns for lumen-ui: dashboard, sidebar, inspector, settings, log panel, command palette."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
egui = { workspace = true }
lumen-ui-core = { workspace = true }
lumen-ui-widgets = { workspace = true }

[features]
# DataTable pattern (search + sortable DataGrid + pagination). Pulls in the widgets
# `datagrid` feature (egui_extras). See docs/adr/0010-datagrid-egui-extras.md.
datagrid = ["lumen-ui-widgets/datagrid"]

[dev-dependencies]
# Headless, AccessKit-driven behavioral tests. No default features (no wgpu/snapshot).
# `install` / `DarkTheme` come from lumen-ui-core (already a normal dependency).
egui_kittest = { version = "0.34.3", default-features = false }
