[package]
name = "lumen-ui-widgets"
description = "Foundational lumen-ui widgets that consume theme recipes (Button, …). Minimal motion built in from v0.2."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
egui = { workspace = true }
egui_extras = { workspace = true, optional = true }
lumen-ui-core = { workspace = true }

[features]
# DataGrid (egui_extras::TableBuilder) — virtualization, resizable columns, sticky header.
# See docs/adr/0010-datagrid-egui-extras.md.
datagrid = ["dep:egui_extras"]

[dev-dependencies]
# Headless, AccessKit-driven widget tests. No default features (no wgpu/snapshot) — the
# functional harness needs neither a GPU nor a renderer.
egui_kittest = { version = "0.34.3", default-features = false }
# For the cross-theme smoke test (audio_dark / high_contrast).
lumen-ui-themes = { workspace = true }
