[package]
name = "lumen-ui"
description = "A token-driven, themeable design system for egui — façade crate (re-exports, prelude, feature flags)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
egui = { workspace = true }
lumen-ui-core = { workspace = true, optional = true }
lumen-ui-widgets = { workspace = true, optional = true }
lumen-ui-layout = { workspace = true, optional = true }
lumen-ui-motion = { workspace = true, optional = true }
lumen-ui-patterns = { workspace = true, optional = true }
lumen-ui-themes = { workspace = true, optional = true }
lumen-ui-icons = { workspace = true, optional = true }

# Drapeaux de features — voir ROADMAP.md §A. Les crates motion/layout/patterns/icons/
# themes/material naissent à leur version respective ; leurs features sont déclarées ici
# par anticipation et seront branchées sur `dep:` quand la crate existera.
[dev-dependencies]
eframe = "0.34"

[[example]]
name = "minimal"
required-features = ["widgets"]

[[example]]
name = "gallery"
required-features = ["widgets"]

[[example]]
name = "responsive"
required-features = ["widgets", "layout"]

[[example]]
name = "motion"
required-features = ["widgets", "motion"]

[[example]]
name = "dashboard"
required-features = ["patterns"]

[[example]]
name = "icons"
required-features = ["icons"]

[features]
default = ["theme", "widgets", "themes"]
tokens = ["dep:lumen-ui-core"]
theme = ["tokens"]
widgets = ["theme", "dep:lumen-ui-widgets"]
datagrid = ["widgets", "lumen-ui-widgets/datagrid", "lumen-ui-patterns?/datagrid"]
layout = ["dep:lumen-ui-layout"]
motion = ["dep:lumen-ui-motion"]
patterns = ["widgets", "dep:lumen-ui-patterns"]
themes = ["theme", "dep:lumen-ui-themes"]
icons = ["theme", "dep:lumen-ui-icons"]
serde = ["lumen-ui-core/serde"]
full = ["widgets", "datagrid", "layout", "motion", "patterns", "themes", "icons", "serde"]
