[package]
name = "lumen-widgets"
description = "Foundational lumen-ui widgets that consume theme recipes (Button, …). Minimal motion built in from v0.2."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
egui = { workspace = true }
lumen-core = { workspace = true }
